# boost-python-examples

./: CMakeLists.txt
01-HelloWorld/: CMakeLists.txt
02-ExposingClasses/: CMakeLists.txt  classes.cpp
03-Constructors/: CMakeLists.txt
04-ClassMembers/: CMakeLists.txt
05-Inheritance/: CMakeLists.txt
06-VirtualFunctionsInPython/: CMakeLists.txt
07-Operators/: CMakeLists.txt
08-CallPolicies/: CMakeLists.txt
09-Overloading/: CMakeLists.txt
10-Embedding/: CMakeLists.txt  embedding.cpp  mymodule.cpp  mymodule.hpp
11-Iterators/: CMakeLists.txt
12-Exceptions/: CMakeLists.txt
13-AutoInstantiation/: auto_instance.cpp  myextension.cpp  myextension.hpp
